Overflow bug fixed

--- a/desktopStyle.css
+++ b/desktopStyle.css
@@ -6,7 +6,6 @@
 body{
     padding: auto;
     background-color: darkgreen;
-    overflow: hidden;
 }
 
 body button:focus{
